# SlicerSimCortex

./: .gitignore  CMakeLists.txt  LICENSE  README.md
SimCortex/: CMakeLists.txt  SimCortex.py
SimCortex/Resources/UI/: SimCortex.ui
